--- a/styles.css
+++ b/styles.css
@@ -488,10 +488,10 @@ p{
     justify-content: center;
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    top: 8px;
+    top: 80px;
 }
 .food-section {
-    background-color: white;
+    background-color: red;
     margin: 0px 15px;
     padding: 15px;
     font-family: 'Oswald', sans-serif;
@@ -502,35 +502,22 @@ p{
     font-weight: 900;
 }
 .food-item{
+    background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 10px 30px;
 }
-<<<<<<< Updated upstream
 .food{
     display: flex;
     flex-direction: column;
     justify-content: left;
 }
-=======
-
->>>>>>> Stashed changes
 .alt{
     background-color: var(--lightBlue);
 }
 .food-item h3{
-<<<<<<< Updated upstream
-    font-weight: 1000;
-    text-transform: uppercase;
-    font-size: 18px;
-    margin-bottom: 0;
-}
-.food-item p{
-    text-transform: lowercase;
-    font-size: 15px;
-=======
     text-transform: uppercase;
     font-weight: 700;
     font-style: normal;
@@ -540,7 +527,6 @@ p{
 .food-item p{
     font-weight: 300;
     font-size: 20px;
->>>>>>> Stashed changes
     margin-top: 5px;
     margin-bottom: 5px;
 }
