--- a/styles.css
+++ b/styles.css
@@ -526,13 +526,13 @@ p{
 }
 .food-item p{
     font-weight: 300;
-    font-size: 20px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    font-size: 25px;
+    text-transform: capitalize;
+    margin-bottom: 1.5px;
 }
 .food-item h2{
-    font-weight: 600;
-    font-size: 70px;
+    font-weight: 500;
+    font-size: 65px;
 }
 
 
