--- a/styles.css
+++ b/styles.css
@@ -491,7 +491,7 @@ p{
     top: 80px;
 }
 .food-section {
-    background-color: red;
+    background-color: #FFFEFE;
     margin: 0px 15px;
     padding: 15px;
     font-family: 'Oswald', sans-serif;
