--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 
 
 nav{
-    background: var(--lightColor);
+    background: white;
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -332,8 +332,6 @@ li a{
     text-transform: uppercase;
 }
 
-
-
 .Instagram{
     display: flex;
     flex-direction: column;
@@ -482,7 +480,7 @@ p{
 .dropdown{
     background-color: var(--darkBlue);
     height: 100px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -490,10 +488,13 @@ p{
     position: sticky;
     top: 80px;
 }
+.show{
+    display: flex;
+}
 .food-section {
     background-color: var(--lightColor);
     margin: 0px 15px;
-    padding: 15px;
+    padding: 45px 50px;
     font-family: 'Oswald', sans-serif;
 }
 .food-section h2{
@@ -527,10 +528,9 @@ p{
 .food-item p{
     font-weight: 300;
     font-size: 25px;
-    text-transform: capitalize;
+    text-transform: lowercase;
     margin-bottom: 1.5px;
     font-size: 25px;
-    text-transform: capitalize;
     margin-bottom: 1.5px;
 }
 .food-item h2{
@@ -579,7 +579,6 @@ footer ul{
         /* height: 100px; */
         width: 100vw;
         padding-top: 20px;
-        padding-bottom: 10px;
     }
     nav h1{
         font-size: 32px;
@@ -606,6 +605,8 @@ footer ul{
         display: flex;
         height: 0px;
         padding-top: 0px;
+        width: 100vw;
+        background-color: var(--lightColor);
         /* padding-bottom: 50px; */
         justify-content: center;
         align-items: center;
