--- a/styles.css
+++ b/styles.css
@@ -27,62 +27,6 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.select{
-    background-color: var(--primaryRed);
-    font-family: 'Oswald', sans-serif;
-    width: 75vw;
-    display: flex;
-    padding: 10px 20px;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    font-size: 25px;
-    font-weight: 700;
-}
-.carrot{
-    display: flex;
-    flex-direction: column;
-    width: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 11px solid white;
-    transition: 0.3s;
-}
-.carrot-rotate{
-    transform: rotate(180deg);
-}
-.menu{
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    padding: 0.2em 0em;
-    background-color: white;
-    position:fixed;
-    top: 175px;
-    left: 50%;
-    width: 75vw;
-    transform: translateX(-50%);
-    opacity: 0;
-    display: none;
-    transition: 0.2s;
-    z-index: 1;
-}
-.menu li{
-    font-family: 'Oswald', sans-serif;
-    padding: 20px;
-    width: 100%;
-    margin: 0;
-    font-weight: 600;
-    font-size: 20px;
-}
-.menu-active{
-    background-color: #FFF1F1;
-}
-.menu-open{
-    display: flex;
-    opacity: 1;
-}
 .Layer_3{
     width: 12%;
     height: auto;
@@ -419,6 +363,9 @@ h1{
 p{
     margin: 0;
 }
+a{
+    text-decoration: none;
+}
 .Location button{
     width: 183.38px;
     height: 44.35px;
@@ -479,13 +426,13 @@ p{
 /* MENUUUUUUUUUUUUUUUUUUU */
 .top-button{
     position: fixed;
+    color: red;
     bottom: 1rem;
     right: 1rem;
 }
 .menu-buttons{
     color: white;
     display: flex;
-    width: 65vw;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -497,15 +444,25 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: sticky;
+    top: 90px;
+    background-color: var(--darkBlue);
 }
 .menu-buttons a{
+    color: #717070;
+    background-color: var(--darkGrey);
     width: 120px;
     height: 60px;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
-    border: 1px solid white;
+    box-shadow: 2px 2px;
+    cursor: pointer;
+}
+.select{
+    background-color: var(--primaryRed)!important;
+    color: white!important;
 }
 .drinks-content{
     display: none;
