--- a/styles.css
+++ b/styles.css
@@ -427,8 +427,8 @@ a{
 .top-button{
     position: fixed;
     color: red;
-    bottom: .5rem;
-    right: .5rem;
+    bottom: 1rem;
+    right: 5rem;
 }
 .top-button img{
     width: 100px;
@@ -491,7 +491,7 @@ a{
 
 .food-section {
     background-color: var(--lightColor);
-    margin: 0px 15px;
+    margin: 0px 85px;
     padding: 45px 50px;
     font-family: 'Oswald', sans-serif;
 }
@@ -745,6 +745,16 @@ footer ul{
     }
     .menu-buttons a{
         width: 120px;
+    }
+    .center{
+        position: static;
+    }
+    .food-section{
+        margin: 0px 20px;
+        padding: 5px 10px;
+    }
+    .top-button{
+        right: 10px;
     }
     
 }
