--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ body{
 nav{
     background: white;
     width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     top: 0px;
     position: sticky;
     /* position: fixed;
@@ -297,9 +297,9 @@ li a{
     display: inline-block;
 }
 .Instagram_Handle p{
-    font-family: 'Roboto Slab';
+    font-family: 'Oswald';
     font-style: normal;
-    font-weight: 900;
+    font-weight: 500;
     font-size: 2vw;
     /* text-transform: lowercase; */
     color: var(--darkBlue);
@@ -326,25 +326,27 @@ li a{
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 25px;
+    padding-bottom: 25px;
 }
 .Location .description{
     width: 100%;
+
 }
-.Location #map{
-    width: 50%;
-}
+
 .Location h1{
+    padding-top: 50px;
     font-family: 'Oswald';
     font-style: normal;
     font-weight: 900;
     font-size: 65px;
     line-height: 111px;
     letter-spacing: 0.05em;
-text-transform: capitalize;
+    text-transform: capitalize;
 }
+
+
 .Location h2{
-    padding-top: 25px;
+
     font-family: 'Oswald';
     font-style: normal;
     font-weight: 700;
@@ -354,19 +356,22 @@ text-transform: capitalize;
     text-decoration-line: underline;
     text-transform: capitalize;
 }
+
+.Location h3{
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-size: 25px;
+    line-height: 150%;
+    text-align: center;
+    text-transform: capitalize;
+}
+
 .Location p{
-    font-size: 28px;
+    font-size: 25px;
+    margin: 33px;
 }
 /* boot strap */
-h1{
-    margin-top: 50px;
-}
-p{
-    margin: 0;
-}
-a{
-    text-decoration: none;
-}
+
 .Location button{
     width: 183.38px;
     height: 44.35px;
@@ -386,8 +391,14 @@ a{
     text-align: center;
     text-transform: uppercase;
 }
-#map{
-    height: 40vh;
+
+.directions{
+    margin: 25px;
+}
+.Location #map{
+    width: 66%;
+    margin-top: 20px;
+    height: 60vh;
 }
 /* ABOUTTTTTTTTTTTTTTTT */
 .about{
@@ -427,9 +438,8 @@ a{
 /* MENUUUUUUUUUUUUUUUUUUU */
 .top-button{
     position: fixed;
-    color: red;
-    bottom: 1rem;
-    right: 5rem;
+    bottom: .5rem;
+    right: .5rem;
 }
 .top-button img{
     width: 100px;
@@ -461,7 +471,7 @@ a{
     justify-content: center;
     align-items: center;
     position: sticky;
-    top: 70px;
+    top: 82px;
     background-color: var(--darkBlue);
 }
 .menu-buttons a{
@@ -506,7 +516,7 @@ a{
 
 .food-section {
     background-color: var(--lightColor);
-    margin: 0px 85px;
+    margin: 0px 15px;
     padding: 45px 50px;
     font-family: 'Oswald', sans-serif;
 }
@@ -757,16 +767,6 @@ footer ul{
     }
     .menu-buttons a{
         width: 120px;
-    }
-    .center{
-        position: static;
-    }
-    .food-section{
-        margin: 0px 20px;
-        padding: 5px 10px;
-    }
-    .top-button{
-        right: 10px;
     }
     
 }
