--- a/styles.css
+++ b/styles.css
@@ -438,21 +438,29 @@ li a{
     align-items: center;
     gap: 100px;
     color: #EEF7FC;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Oswald';
+    font-style: normal;
+
 }
 .about p, .about img{
     width: 40vw;
+
 }
 .about img{
     height: 750px;
     width: auto;
 }
 .about p{
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 135%;
+    letter-spacing: 0.0333em;
+
     height: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: left;
     padding: 20px;
     background:
       linear-gradient(to right, #EEF7FC 1px, transparent 2px) 0 0,
