--- a/styles.css
+++ b/styles.css
@@ -627,8 +627,11 @@ li a{
 /* FAQ */
 .faq{
     margin: 0px 300px;
+    margin: 50px 300px;
     background-color: white;
 }
+
+
 
 footer{
     display: flex;
